igw.tf
# Creating Internet Gateway 
resource "aws_internet_gateway" "demogateway" {
  vpc_id = "${var.vpc_id}"
}
